dashboard/app/assets/stylesheets/application.scss
/* ... */
.reference_area {
  margin-top: 20px;

  .help_title {
    color: $dark_charcoal;
    font-family: $gotham-extra-bold;
    font-weight: normal;
    font-size: 17.5px;
    display: inline-block;
  }

  .solution_link {
    font-size: 17.5px;
    padding-bottom: 4px;
  }

  .video_link {
    display: inline-block;
    margin: 6px;
  }

  .video_name {
    text-align: center;
  }

  .help_subtitle {
    display: inline-block;
  }
}

#notes-outer {
  overflow-y: scroll;
  padding: 0;
}
#notes {
  .note {
    padding-bottom: 10px;
    p {
      font-size: 20px;
      line-height: 24px;
      padding-right: 30px;
      display: table-cell;
    }
    img {
      float: left;
      width: 450px;
      height: auto;
      padding-right: 30px;
    }
  }
}

// Tabs

.video-modal {
  .modal-body {
    padding: 0;
  }
  .ui-tabs-nav {
    background: $light_gray;

    li {
      border-top-right-radius: 4px;
      border-top-left-radius: 4px;

      a {
        background: $dark_color;
        color: $white;
        &:hover {
          color: $green;
        }
        &:focus {
          outline: 0;
        }
      }

      html[dir=rtl] & {
        float: right;
      }
    }

    li.ui-state-active {
      a {
        background: $white;
        color: $orange;
        &:hover {
          color: $orange;
        }
      }
    }
  }
}

@mixin close-button($cornerOffset) {
  $startWidth: 61px;
  $startHeight: 59px;
  $growth: 3px;
  $movement: 1px;

  position: absolute;
  cursor: pointer;
  z-index: 10;
  background: image-url("x_button.png") no-repeat center center;
  background-size: 100% auto;

  top: $cornerOffset;
  right: $cornerOffset;
  width: $startWidth;
  height: $startHeight;
  &:hover {
    top: $cornerOffset - $movement;
    right: $cornerOffset - $movement;
    width: $startWidth + $growth;
    height: $startHeight + $growth;
  }

  html[dir=rtl] &, .flip-x-close & {
    right: auto;
    left: $cornerOffset;
  }
  html[dir=rtl] &:hover, .flip-x-close &:hover {
    right: auto;
    left: $cornerOffset - $movement;
  }

  html[dir=rtl] .flip-x-close & {
    right: auto;
    left: $cornerOffset;
  }

  html[dir=rtl] .flip-x-close &:hover {
    right: auto;
    left: $cornerOffset - $movement;
  }
}

.x-close {
  @include close-button($cornerOffset: -20px);
}

.open-link {
  $startWidth: 61px;
  $startHeight: 59px;
  $cornerOffset: -20px;
  $growth: 3px;
  $movement: 1px;

  position: absolute;
  cursor: pointer;
  z-index: 1;
  background: image-url("open_button.png") no-repeat center center;
  background-size: 100% auto;

  top: $cornerOffset;
  right: -30px + $startWidth;
  width: $startWidth;
  height: $startHeight;
  &:hover {
    width: $startWidth + $growth;
    height: $startHeight + $growth;
  }
}
.open-link > a {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
}

.qtip-content {
  font-size: 20px;
  line-height: 28px;
  color: $purple;
  font-family: $gotham-bold;
  font-weight: normal;
  padding-right: 25px;
}

html[dir=rtl] .qtip-content {
  direction: rtl;
  text-align: right;
  padding-right: 9px;
  padding-left: 25px;
}

.qtip-default {
  background-color: $white;
  color: $charcoal;
  border: 1px solid $charcoal;
  border-radius: 8px;
  box-shadow: 5px 5px 5px $shadow;
  padding: 10px;
}

.no-tip .qtip-tip {
  visibility: hidden;
}

.cdo-qtips {
  z-index: 2000 !important;
}

.tooltip-x-close.qtip-icon {
  @include close-button($cornerOffset: -20px);
}

a.download-video {
  z-index: 1;
  cursor: pointer;
  width: 40px;
  height: 36px;
  &:hover {
    background: none;
  }
  img {
    width: 40px;
    height: 41px;
    margin-top: -3px;
    margin-bottom: -2px;
  }
  img:hover {
    width: 41px;
    height: 42px;
    margin-bottom: -3px;
  }
}

.quiet_links {
  a:link {
    font-family: $gotham-regular;
    font-weight: normal;
  }
}

.fixed_width_cell {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 5px;
}

#landingpage {
  .row#continue {
    background-color: $teal;
    color: $white;
    font-size: 24.5px;
    padding: 5px 0;
    #puzzle {
      font-family: $gotham-extra-bold;
      font-weight: normal;
    }
    .btn {
      height: 32px;
      margin: 0 5px;
    }
  }

  #welcome h2 {
    font-size: 18px;
  }

  h3.whitetext {
    a, a:link, a:hover, a:visited {
      color: $white;
      text-decoration: none;
      cursor: pointer;
    }
  }

  .row.navcontainer {
    margin: 30px 0 10px -20px;
    background-color: $lightest_gray;
  }

  ul.nav.nav-pills {
    text-transform: uppercase;
    padding: 10px;
    li {
      margin-right: 10px;
    }

    li.active a, li.active a:hover, li.active a:link {
      background-color: $white;
      color: $purple;
      border: 2px solid $purple;
    }
    li a:hover, a:focus {
      text-decoration: none;
      background-color: $white;
    }
  }

  #signup {
    padding-top: 10px;
    .medium-size-text {
      font-size: 18px;
      line-height: 30px;
    }
    #maintext {
      text-align: left;
      padding-left: 20px;
      color: $charcoal;
    }
    #helptext {
      text-align: right;
      padding-right: 20px;
      color: $light_gray;
    }
  }

  #lesson {
    #heading {
      width: 700px;
    }

    /**
     * betatext can be used to style a span directly, or betacontainer can be
     * used on a node containing markdown to apply the beta styling to all
     * **strong** nodes in the markdown
     */
    .betatext, .betacontainer strong {
      background: $white;
      color: $cyan;
      padding: 2px 4px;
      border: 1px solid $cyan;
    }
  }
}

.course_progress {
  margin: 10px 0;
}
/* ... */

